table overflow fix attempt 7

--- a/themes/whodathunk-theme/assets/css/main.css
+++ b/themes/whodathunk-theme/assets/css/main.css
@@ -33,6 +33,9 @@ td {
     padding: 0.3em;
     /*align-items: left;*/
     border-collapse: collapse;
+    flex: 1;
+    display: flex;
+    overflow: auto;
 }
 
 header {
